After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781027 - ttmlparse: Incorrectly filters untimed whitespace from content nodes
ttmlparse: Incorrectly filters untimed whitespace from content nodes
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.11.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-07 09:55 UTC by Chris Bass
Modified: 2017-04-09 07:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Example TTML file demonstrating the issue. (1.55 KB, text/xml)
2017-04-07 09:55 UTC, Chris Bass
  Details
ttmlparse: don't filter out untimed whitespace (4.47 KB, patch)
2017-04-07 10:04 UTC, Chris Bass
committed Details | Review

Description Chris Bass 2017-04-07 09:55:27 UTC
Created attachment 349446 [details]
Example TTML file demonstrating the issue.

Significant whitespace in elements that don't have begin/end values should inherit timing from their parent, and if their parents have no timing, from the document's Root Temporal Extent. Currently, such whitespace is removed, which is not spec-compliant.

The attached file demonstrates the problem. When this file is rendered, the whitespace resulting from the newlines and the indentation before each span should result in a single space with transparent background being rendered between each rendered span. Instead, the spans are rendered without any space between them.

Example file can be run using this command:

gst-launch-1.0 ttmlrender name=r videotestsrc pattern="gradient" ! video/x-raw,width=1280,height=720 ! autovideoconvert ! videoscale ! video/x-raw,width=1280,height=720 ! r.video_sink filesrc blocksize=4294967295 location=test.xml ! ttmlparse ! r.text_sink r. ! ximagesink
Comment 1 Chris Bass 2017-04-07 10:04:35 UTC
Created attachment 349448 [details] [review]
ttmlparse: don't filter out untimed whitespace

Retain whitespace in content nodes and assign a Root Temporal Extent of 24 hours to any significant whitespace whose ancestors have no associated timing.

** Note: this should be applied on top of the patches in https://bugzilla.gnome.org/show_bug.cgi?id=780402 **
Comment 2 Sebastian Dröge (slomo) 2017-04-09 07:44:06 UTC
Attachment 349448 [details] pushed as b4d9d9d - ttmlparse: don't filter out untimed whitespace